test/fail/asyncret2.mo
func call3(f : shared () -> future Int) : future Int { f(); };
